--- a/WebContent/heshamapp.html
+++ b/WebContent/heshamapp.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://code.jquery.com/jquery-latest.min.js">
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
 
 $(document).ready(function(){
